fix double scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,9 @@ h6 {
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: auto;
+}
+
+html {
   scrollbar-gutter: stable;
 }
 
